fix(eslint-plugin): typeError in reatom/unit-naming-rule

--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -53,5 +53,8 @@
   "devDependencies": {
     "@types/eslint": "^8.0.0",
     "eslint": "^8.0.0"
+  },
+  "dependencies": {
+    "@types/estree": "^1.0.6"
   }
 }
